objects/SF_Credit_Reference__c.object
<CustomObject>
    <fields>
        <fullName>Average_Days_to_Pay__c</fullName>
        <label>Average Days to Pay</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Amount_Granted__c</fullName>
        <label>Credit Amount Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Application__c</fullName>
        <label>Credit Application</label>
        <referenceTo>Credit_Application__c</referenceTo>
        <relationshipLabel>SF Credit References</relationshipLabel>
        <relationshipName>SF_Credit_References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <label>Credit Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIA</fullName>
                </value>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>High_Credit__c</fullName>
        <label>High Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Length_of_Business__c</fullName>
        <label>Length of Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reference_Company_Website__c</fullName>
        <label>Reference Company Website</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reference_Company__c</fullName>
        <label>Reference Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SF Credit Reference</label>
    <nameField>
        <displayFormat>SFCRF-{000000}</displayFormat>
        <label>SF Credit Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Credit References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>